--- a/src/index.html
+++ b/src/index.html
@@ -18,13 +18,31 @@
                 </a>
                 <div class="header__official">
                     Официальный представитель
-                    <span>Garmin, Polar, Suunto</span>
+                    <span>Garmin Polar, Suunto</span>
                 </div>
                 <div class="header__contacts">
                     <a href="tel:+375291290891" class="header__phone">+375 29 129 08 91</a>
                     <button class="button">заказать звонок</button>
                 </div>
             </header>
+            <div class="promo__wrapper">
+                <h1 class="promo__header">Подбор пульсометра</h1>
+                <h2 class="promo__subheader">с учётом Вашего уровня подготовки</h2>
+                <div class="promo__icons">
+                    <div class="promo__icon">
+                        <img src="/src/icons/time.png" alt="time">
+                        Время подбора: 10 минут
+                    </div>
+                    <div class="promo__icon">
+                        <img src="/src/icons/delivery.png" alt="delivery">
+                        Бесплатная доставка
+                    </div>
+                    <div class="promo__icon">
+                        <img src="/src/icons/messages.png" alt="messages">
+                        Ответим на все вопросы
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
