--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,16 @@
                         Ответим на все вопросы
                     </div>
                 </div>
+                <button class="button button_main">ЗАКАЗАТЬ КОНСУЛЬТАЦИЮ</button>
+                <div class="promo__link">
+                    или <a href="#">ПЕРЕЙТИ В КАТАЛОГ</a>
+                </div>
             </div>
+        </div>
+    </div>
+    <div class="advantages">
+        <div class="container">
+            
         </div>
     </div>
 </body>
