--- a/src/index.html
+++ b/src/index.html
@@ -104,6 +104,31 @@
             </div>
         </div>
     </section>
+    <section class="catalog">
+        <div class="container">
+            <h1 class="title">Каталог пульсометров</h1>
+            <ul class="catalog__tabs">
+                <li class="catalog__tab catalog__tab_active"><div>Для фитнеса
+                </div></li>
+                <li class="catalog__tab"><div>для бега</div></li>
+                <li class="catalog__tab"><div>для триатлона</div></li>
+            </ul>
+            <div class="card">
+                <img src="img/HeartRteMonitor.png" alt="Pulsometr" class="card__img">
+                <div class="card__title">Пульсометр Polar FT1</div>
+                <div class="card__subtitle">Для первых шагов в тренировках,<br> основанных на сердечном ритме</div>
+                <a href="#" class="card__more_details">ПОДРОБНЕЕ</a>
+                <hr>
+                <div class="card__buy">
+                    <div class="card__price">
+                        <div class="card__old_price">4 750 руб.</div>
+                        <div class="card__actual_price">4 500 руб.</div>
+                    </div>
+                    <button class="card__button_buy button">КУПИТЬ</button>
+                </div>
+            </div>
+        </div>
+    </section>
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js">
     </script>
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
