--- a/src/index.html
+++ b/src/index.html
@@ -400,9 +400,51 @@
     </section>
     <section class="reviews">
         <div class="container">
-            
+            <h2 class="title">отзывы клиентов</h2>
+            <div class="reviews__content">
+                <img src="img/photo1.png" alt="photo1" class="reviews__content-photo">
+                <div class="reviews__content-item">
+                    <div class="reviews__content_title">Ирина Иванченко</div>
+                    <div class="reviews__content_subtitle">2 полумарафона</div>
+                    <div class="reviews__content_feedback">Не знала, что себе купить - обратилась к ребятам из RunSmart - подобрали<br> пульсометр,
+                        который подошёл именно под мои цели и финансовые возможности.<br>
+                        Через некоторое время решила обновить гаджет - не раздумывая обратилась туда же.<br><br>
+                        Новые цели - новый гаджет! <br><br>
+                        Спасибо, RunSmart!</div>
+                </div>
+            </div>
+            <div class="reviews__content">
+                <img src="img/photo2.png" alt="photo1" class="reviews__content-photo">
+                <div class="reviews__content-item">
+                    <div class="reviews__content_title">Иван Сёмочкин</div>
+                    <div class="reviews__content_subtitle">1 полумарафон </div>
+                    <div class="reviews__content_feedback">Крутая штука-пульсометр. Обычно без них бегал. Оказывается только хуже себе делал. <br>
+                        Купил пульсометр, ещё в подарок получил тренировку. Со мной вместе провели<br>
+                        первую тренировку, научили пользоваться новым гаджетом. Также объяснили основы<br>
+                        анатомии, составили план тренировок на месяц вперёд.<br><br>
+                        С ними подготовился к своему первому полумарафону! Спасибо!!!</div>
+                </div>
+            </div>
+            <div class="reviews__content">
+                <img src="img/photo3.png" alt="photo1" class="reviews__content-photo">
+                <div class="reviews__content-item">
+                    <div class="reviews__content_title">Юлия Дашкина</div>
+                    <div class="reviews__content_subtitle">2 полумарафона</div>
+                    <div class="reviews__content_feedback">Долго не могла начать бегать, т.к. до этого несколько раз начинала, но становилось<br>
+                    тяжело и я бросала. От друзей услышала о RunSmart и о беге с контролем пульса и<br> 
+                    решила попробовать.<br><br>
+                    Позвонила, ребята поинтересовались моими целями и подобрали очень интересный<br>
+                    вариант со скидкой! Теперь бегаю и наслаждаюсь бегом! Пробежала уже 2<br> полумарафона и несколько более коротких забегов и не намерен останавливаться!<br><br>
+                    Спасибо!!!</div>
+                </div>
+            </div>
         </div>
     </section>
+    <footer class="footer">
+        <div class="footer__map"></div>
+        <div class="footer__info"></div>
+    </footer>
+
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js">
     </script>
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
