--- a/src/index.html
+++ b/src/index.html
@@ -5,12 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Пульсометры</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"> 
     <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/bootstrap-reboot.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <a class="top_button"></a>
     <section class="promo">
         <div class="container">
             <header class="header">
@@ -45,7 +47,7 @@
                 </div>
                 <button class="button button_main">ЗАКАЗАТЬ КОНСУЛЬТАЦИЮ</button>
                 <div class="promo__link">
-                    или <a href="#">ПЕРЕЙТИ В КАТАЛОГ</a>
+                    или <a href="#catalog">ПЕРЕЙТИ В КАТАЛОГ</a>
                 </div>
             </div>
         </div>
@@ -104,7 +106,7 @@
             </div>
         </div>
     </section>
-    <section class="catalog">
+    <section class="catalog" id="catalog">
         <div class="container">
             <h2 class="title">Каталог пульсометров</h2>
             <ul class="catalog__tabs">
@@ -441,13 +443,22 @@
         </div>
     </section>
     <footer class="footer">
-        <div class="footer__map"></div>
-        <div class="footer__info"></div>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2278.8067960572894!2d30.19711551588656!3d55.169156280401296!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46c57164b377e88d%3A0xc4726e8c5417f3ff!2z0L_RgNC-0YHQv9C10LrRgiDQp9C10YDQvdGP0YXQvtCy0YHQutC-0LPQviAzOCwg0JLQuNGC0LXQsdGB0Lo!5e0!3m2!1sru!2sby!4v1621450773773!5m2!1sru!2sby" width="100%" height="630" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        <div class="footer__info">
+            <address class="footer__addr">Витебск. Черняховского 38</address>
+            <a class="footer__phone" href="tel:80291290891">8 (29) 129 08 91</a>
+            <div class="footer__social">
+                <a href="#" class="footer__soccial-item"><img src="icons/fasebook.png" alt="fasebook"></a>
+                <a href="#" class="footer__soccial-item"><img src="icons/inst.png" alt="instagram"></a>
+                <a href="#" class="footer__soccial-item"><img src="icons/pinterest.png" alt="pinterest"></a>
+            </div>
+        </div>
     </footer>
-
+    
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js">
     </script>
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script src="js/top_button.js"></script>
     <script src="js/slick.min.js"></script>
     <script src="js/script.js"></script>
 </body>
