--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"> 
     <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/bootstrap-reboot.css">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -25,7 +25,7 @@
                 </div>
                 <div class="header__contacts">
                     <a href="tel:+375291290891" class="header__phone">+375 29 129 08 91</a>
-                    <button class="button">заказать звонок</button>
+                    <button class="button" data-bs-toggle="modal" data-bs-target="#modal-thanks">заказать звонок</button>
                 </div>
             </header>
             <div class="promo__wrapper">
@@ -45,7 +45,7 @@
                         Ответим на все вопросы
                     </div>
                 </div>
-                <button class="button button_main">ЗАКАЗАТЬ КОНСУЛЬТАЦИЮ</button>
+                <button type="button" class="button button_main" data-bs-toggle="modal" data-bs-target="#modal-request">ЗАКАЗАТЬ КОНСУЛЬТАЦИЮ</button>
                 <div class="promo__link">
                     или <a href="#catalog">ПЕРЕЙТИ В КАТАЛОГ</a>
                 </div>
@@ -143,7 +143,7 @@
                             <div class="catalog-item__old-price">6 990 руб.</div>
                             <div class="catalog-item__price">6 641 руб.</div>
                         </div>
-                        <button class="button button_mini">КУПИТЬ</button>
+                        <button class="button button_mini" data-bs-toggle="modal" data-bs-target="#modal-order">КУПИТЬ</button>
                     </div>
                 </div>
                 <div class="catalog-item">
@@ -174,7 +174,7 @@
                             <div class="catalog-item__old-price">6 990 руб.</div>
                             <div class="catalog-item__price">6 641 руб.</div>
                         </div>
-                        <button class="button button_mini">КУПИТЬ</button>
+                        <button class="button button_mini" data-bs-toggle="modal" data-bs-target="#modal-order">КУПИТЬ</button>
                     </div>
                 </div>
                 <div class="catalog-item">
@@ -205,7 +205,7 @@
                             <div class="catalog-item__old-price">6 990 руб.</div>
                             <div class="catalog-item__price">6 641 руб.</div>
                         </div>
-                        <button class="button button_mini">КУПИТЬ</button>
+                        <button class="button button_mini" data-bs-toggle="modal" data-bs-target="#modal-order">КУПИТЬ</button>
                     </div>
                 </div>
                 <div class="catalog-item">
@@ -236,7 +236,7 @@
                             <div class="catalog-item__old-price">6 990 руб.</div>
                             <div class="catalog-item__price">6 641 руб.</div>
                         </div>
-                        <button class="button button_mini">КУПИТЬ</button>
+                        <button class="button button_mini" data-bs-toggle="modal" data-bs-target="#modal-order">КУПИТЬ</button>
                     </div>
                 </div>
                 <div class="catalog-item">
@@ -267,7 +267,7 @@
                             <div class="catalog-item__old-price">6 990 руб.</div>
                             <div class="catalog-item__price">6 641 руб.</div>
                         </div>
-                        <button class="button button_mini">КУПИТЬ</button>
+                        <button class="button button_mini" data-bs-toggle="modal" data-bs-target="#modal-order">КУПИТЬ</button>
                     </div>
                 </div>
                 <div class="catalog-item">
@@ -298,7 +298,7 @@
                             <div class="catalog-item__old-price">6 990 руб.</div>
                             <div class="catalog-item__price">6 641 руб.</div>
                         </div>
-                        <button class="button button_mini">КУПИТЬ</button>
+                        <button class="button button_mini" data-bs-toggle="modal" data-bs-target="#modal-order">КУПИТЬ</button>
                     </div>
                 </div>
             </div>
@@ -331,7 +331,7 @@
                             <div class="catalog-item__old-price">6 990 руб.</div>
                             <div class="catalog-item__price">6 641 руб.</div>
                         </div>
-                        <button class="button button_mini">КУПИТЬ</button>
+                        <button class="button button_mini" data-bs-toggle="modal" data-bs-target="#modal-order">КУПИТЬ</button>
                     </div>
                 </div>
             </div>
@@ -364,7 +364,7 @@
                             <div class="catalog-item__old-price">6 990 руб.</div>
                             <div class="catalog-item__price">6 641 руб.</div>
                         </div>
-                        <button class="button button_mini">КУПИТЬ</button>
+                        <button class="button button_mini" data-bs-toggle="modal" data-bs-target="#modal-order">КУПИТЬ</button>
                     </div>
                 </div>
                 <div class="catalog-item">
@@ -395,7 +395,7 @@
                             <div class="catalog-item__old-price">6 990 руб.</div>
                             <div class="catalog-item__price">6 641 руб.</div>
                         </div>
-                        <button class="button button_mini">КУПИТЬ</button>
+                        <button class="button button_mini" data-bs-toggle="modal" data-bs-target="#modal-order">КУПИТЬ</button>
                     </div>
                 </div>
             </div>
@@ -454,7 +454,57 @@
             </div>
         </div>
     </footer>
-    
+    <div class="modal fade" id="modal-request" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal__request">
+        <div class="modal-content">
+            <div class="modal__header">
+                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                <h2 class="modal-title" id="exampleModalLabel">Просто заполните форму заявки</h2>
+                <div class="modal_subtitle">и мы перезвоним вам в течении 10 минут</div>
+            </div>
+            <div class="modal-body">
+            <form>
+                    <input placeholder="Ваше имя" type="text" class="form-control modal__input-name" id="recipient-name">
+                    <input placeholder="Ваш телефон" type="tel" class="form-control modal__input-phone" id="recipient-name">
+                    <input placeholder="Ваш E-mail" type="url" class="form-control modal__input-email" id="recipient-name">
+            </form>
+            </div>
+            <button type="button" class="button modal__button-order" data-bs-toggle="modal" data-bs-target="#modal-thanks">ЗАКАЗАТЬ КОНСУЛЬТАЦИЮ</button>
+        </div>
+        </div>
+    </div>
+    <div class="modal fade" id="modal-order" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal__order">
+        <div class="modal-content">
+            <div class="modal__header">
+                <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                <h2 class="modal-title" id="exampleModalLabel">Ваш заказ:</h2>
+                <div class="modal_subtitle">Пульсометр Polar FT1</div>
+            </div>
+            <div class="modal-body">
+            <form>
+                    <input placeholder="Ваше имя" type="text" class="form-control modal__input-name" id="recipient-name">
+                    <input placeholder="Ваш телефон" type="tel" class="form-control modal__input-phone" id="recipient-name">
+                    <input placeholder="Ваш E-mail" type="url" class="form-control modal__input-email" id="recipient-name">
+            </form>
+            </div>
+            <button type="button" class="button modal__button-order">КУПИТЬ </button>
+        </div>
+        </div>
+    </div>
+    <div class="modal fade" id="modal-thanks" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal__thanks">
+            <div class="modal-content">
+                <div class="modal__header">
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                    <h2 class="modal-title" id="exampleModalLabel">Спасибо за вашу заявку!</h2>
+                    <div class="modal_subtitle">Наш менеджер свяжется с вами<br> 
+                        в ближайшее время!</div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="js/bootstrap.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js">
     </script>
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
