--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,7 @@
                         так как сами бегают полумарафоны, переплыли Босфор, готовятся к соревнованиям по триатлону!</span>
                     </div>
                     <div class="advantages__icon">
-                        <img src="/src/icons/Health.png" alt="Health">
+                        <img src="/src/icons/Health.png" alt="Health" class="advantages__icon-animated">
                         <h4>Заботимся о здоровье</h4>
                         <span>Мы работаем для того, 
                         чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вам и Вашим близким!</span>
