--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
                 <h2 class="promo__subheader">с учётом Вашего уровня подготовки</h2>
                 <div class="promo__icons">
                     <div class="promo__icon">
-                        <img src="/src/icons/time.png" alt="time">
+                        <img src="icons/time.png" alt="time">
                         Время подбора: 10 минут
                     </div>
                     <div class="promo__icon">
-                        <img src="/src/icons/delivery.png" alt="delivery">
+                        <img src="icons/delivery.png" alt="delivery">
                         Бесплатная доставка
                     </div>
                     <div class="promo__icon">
-                        <img src="/src/icons/messages.png" alt="messages">
+                        <img src="icons/messages.png" alt="messages">
                         Ответим на все вопросы
                     </div>
                 </div>
@@ -58,19 +58,19 @@
                 <h2 class="title">НАШИ ПРЕИМУЩЕСТВА</h2>
                 <div class="advantages__icons">
                     <div class="advantages__icon">
-                        <img src="/src/icons/experience.png" alt="Experience">
+                        <img src="icons/experience.png" alt="Experience">
                         <h4>Делимся опытом</h4>
                         <span>Наши сотрудники всегда готовы поделиться своим опытом, 
                         так как сами бегают полумарафоны, переплыли Босфор, готовятся к соревнованиям по триатлону!</span>
                     </div>
                     <div class="advantages__icon">
-                        <img src="/src/icons/Health.png" alt="Health" class="advantages__icon-animated">
+                        <img src="icons/Health.png" alt="Health" class="advantages__icon-animated">
                         <h4>Заботимся о здоровье</h4>
                         <span>Мы работаем для того, 
                         чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вам и Вашим близким!</span>
                     </div>
                     <div class="advantages__icon">
-                        <img src="/src/icons/run.png" alt="Run">
+                        <img src="icons/run.png" alt="Run">
                         <h4>Учим бегать</h4>
                         <span>Помогаем с обучением 
                         правильной технике бега! 
